--- a/student_progress/src/main/webapp/styleOne.css
+++ b/student_progress/src/main/webapp/styleOne.css
@@ -16,7 +16,7 @@ body {
 }
 .nav_position {
 	position: absolute;
-	left: 57%;
+	left: 46%;
 }
 .nav_bar > li {
 	display: flex;
@@ -32,6 +32,7 @@ body {
 	text-align: center;
 	line-height: 100px;
 	font-size: 30px;
+	font-family: roboto;
 }
 .nav_list {
 	width: 8em;
@@ -74,4 +75,8 @@ body {
 	width: 600px;
 	height: 400px;
 	background-color: hsl(200deg 50% 80%); 
+}
+.user {
+	text-transform: uppercase;
+	font-size: 29px;
 }
